test/fixtures/type-error/bad-assignment.lys
fun test(): f32 = {
  var test = false
  test = 12
  test
}
